--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -14,6 +14,8 @@ jobs:
 
       - name: Configure node
         uses: actions/setup-node@v4
+        with:
+          node-version-file: '.nvmrc'
 
       - name: Install dependencies
         run: npm ci
