--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Configure node
         uses: actions/setup-node@v4
         with:
-          node-version-file: '../.nvmrc'
+          node-version: '16.17.1'
 
       - name: Install dependencies
         run: npm ci
