--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "test": "vitest"
   },
   "dependencies": {
     "axios": "^1.5.0",
@@ -33,7 +34,9 @@
     "prettier": "^3.0.0",
     "sass": "^1.66.1",
     "typescript": "~5.1.6",
+    "unplugin-vue-components": "0.27.4",
     "vite": "^4.4.9",
+    "vitest": "2.0.5",
     "vue-tsc": "^1.8.8"
   }
 }
