--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,23 +1,11 @@
 {
-  "extends": "@tsconfig/node18/tsconfig.json",
-  "include": [
-    "vite.config.*",
-    "vitest.config.*",
-    "cypress.config.*",
-    "nightwatch.conf.*",
-    "playwright.config.*"
-  ],
   "compilerOptions": {
     "composite": true,
+    "skipLibCheck": true,
     "module": "ESNext",
-    "moduleResolution": "Bundler",
-    "types": ["node"],
-    "paths": {
-      "@/*": [
-        "./src/*" // set path `@/*` as alias of `src/*`
-      ]
-    },
-    "noImplicitAny": false,
-    "allowJs": true,
-  }
+    "lib": ["ESNext"],
+    "moduleResolution": "bundler",
+    "allowSyntheticDefaultImports": true
+  },
+  "include": ["vite.config.ts"]
 }
