--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,6 +33,9 @@ jobs:
       - name: Build app
         run: npm run build
 
+      - name: Run tests
+        run: npm test
+
       - name: Deploy to Netlify
         uses: nwtgck/actions-netlify@v3.0
         if: ${{ inputs.deploy-netlify }}
