--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -37,7 +37,7 @@ jobs:
         run: npm install --global vercel@canary
 
       - name: Pull Vercel Environment Information
-        run: vercel pull --yes --enviroment=production --token=${{ secrets.VERCEL_AUTH_TOKEN }}
+        run: vercel pull --yes --environment=production --token==${{ secrets.VERCEL_AUTH_TOKEN }}
 
       - name: Build for Vercel
         run: vercel build --token=${{ secrets.VERCEL_AUTH_TOKEN }}
