--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
-      VERCEL_ORGANIZATION_ID: ${{ secrets.VERCEL_ORGANIZATION_ID }}
+      VERCEL_ORG_ID: ${{ secrets.VERCEL_ORGANIZATION_ID }}
       VERCEL_AUTH_TOKEN: ${{ secrets.VERCEL_AUTH_TOKEN }}
     steps:
       - name: Checkout repository
@@ -33,9 +33,29 @@ jobs:
       - name: Build app
         run: npm run build
 
-      - name: Vercel Preview Deployments
-        uses: snaplet/vercel-action@v3.0.1
-        env:
-          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORGANIZATION_ID }}
-          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
-          VERCEL_ACCESS_TOKEN: ${{ secrets.VERCEL_AUTH_TOKEN }}
+      - name: Install Vercel CLI
+        run: npm install --global vercel@canary
+
+      - name: Pull Vercel Environment Information
+        run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_AUTH_TOKEN }}
+
+      - name: Build for Vercel
+        run: vercel build --token=${{ secrets.VERCEL_AUTH_TOKEN }}
+
+      - name: Deploy to Vercel
+        run: |
+          DEPLOY_OUTPUT="$(vercel deploy --token=${{ secrets.VERCEL_AUTH_TOKEN }})"
+          DEPLOY_URL=$(echo "$DEPLOY_OUTPUT" | grep https | tail -n 1)
+          echo "DEPLOY_URL=$DEPLOY_URL" >> $GITHUB_ENV
+
+      - name: Comment with preview URL
+        uses: actions/github-script@v7.0.1
+        with:
+          script: |
+            const { DEPLOY_URL } = process.env;
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: `Preview URL: ${DEPLOY_URL}`
+            })
