--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,23 +8,9 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    env:
-      NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-      NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
-      VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
-      VERCEL_ORGANIZATION_ID: ${{ secrets.VERCEL_ORGANIZATION_ID }}
-      VERCEL_AUTH_TOKEN: ${{ secrets.VERCEL_AUTH_TOKEN }}
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
       - name: Configure node
-        uses: actions/setup-node@v4
-        with:
-          node-version-file: '.nvmrc'
-
-      - name: Install dependencies
-        run: npm ci
+        uses: ./.github/workflows/actions/setup-project
 
       - name: Run tests
         run: npm test
@@ -32,9 +18,11 @@ jobs:
       - name: Build app
         run: npm run build
 
-      - name: Vercel Preview Deployments
-        uses: snaplet/vercel-action@v3.0.1
+      - name: Deploy app to Vercel production env
+        uses: ./.github/workflows/actions/deploy-vercel
+        with:
+          mode: production
+          vercel-token: ${{ secrets.VERCEL_AUTH_TOKEN }}
         env:
-          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORGANIZATION_ID }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
-          VERCEL_ACCESS_TOKEN: ${{ secrets.VERCEL_AUTH_TOKEN }}
+          VERCEL_ORGANIZATION_ID: ${{ secrets.VERCEL_ORGANIZATION_ID }}
