--- a/.github/workflows/actions/deploy-vercel/action.yml
+++ b/.github/workflows/actions/deploy-vercel/action.yml
@@ -34,3 +34,17 @@ runs:
             DEPLOY_URL=$(echo "$DEPLOY_OUTPUT" | grep https | tail -n 1)
             echo "DEPLOY_URL=$DEPLOY_URL" >> $GITHUB_ENV
         shell: bash
+
+        
+        - name: Comment with preview URL
+        if: ${{ inputs.mode == 'preview' }}
+        uses: actions/github-script@v7.0.1
+        with:
+            script: |
+            const { DEPLOY_URL } = process.env;
+            github.rest.issues.createComment({
+                issue_number: context.issue.number,
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                body: `Preview URL: ${DEPLOY_URL}`
+            })
