--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "@vue/tsconfig": "^0.4.0",
     "eslint": "^8.46.0",
     "eslint-plugin-vue": "^9.16.1",
+    "gulp-sass": "5.1.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.0",
-    "sass": "^1.66.1",
+    "sass": "1.80.3",
+    "sass-loader": "16.0.2",
     "typescript": "~5.1.6",
     "unplugin-vue-components": "0.27.4",
-    "vite": "^4.4.9",
+    "vite": "5.4.10",
     "vitest": "2.0.5",
     "vue-tsc": "^1.8.8"
   }
