--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -6,29 +6,56 @@ on:
       - main
 
 jobs:
-  deploy-pr:
+  deploy:
     runs-on: ubuntu-latest
+    env:
+      VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+      VERCEL_ORG_ID: ${{ secrets.VERCEL_ORGANIZATION_ID }}
+      VERCEL_AUTH_TOKEN: ${{ secrets.VERCEL_AUTH_TOKEN }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Configure node
-        uses: ./.github/actions/setup-project
+        uses: actions/setup-node@v4
+        with:
+          node-version-file: '.nvmrc'
+
+      - name: Install dependencies
+        run: npm ci
 
       - name: Lint code
         run: npm run lint
 
       - name: Run tests
-        run: npm run test
+        run: npm test
 
       - name: Build app
         run: npm run build
 
-      - name: Deploy app to Vercel preview env
-        uses: ./.github/actions/deploy-vercel
+      - name: Install Vercel CLI
+        run: npm install --global vercel@canary
+
+      - name: Pull Vercel Environment Information
+        run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_AUTH_TOKEN }}
+
+      - name: Build for Vercel
+        run: vercel build --token=${{ secrets.VERCEL_AUTH_TOKEN }}
+
+      - name: Deploy to Vercel
+        run: |
+          DEPLOY_OUTPUT="$(vercel deploy --token=${{ secrets.VERCEL_AUTH_TOKEN }})"
+          DEPLOY_URL=$(echo "$DEPLOY_OUTPUT" | grep https | tail -n 1)
+          echo "DEPLOY_URL=$DEPLOY_URL" >> $GITHUB_ENV
+
+      - name: Comment with preview URL
+        uses: actions/github-script@v7.0.1
         with:
-          mode: preview
-          vercel-token: ${{ secrets.VERCEL_AUTH_TOKEN }}
-        env:
-          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
-          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORGANIZATION_ID }}
+          script: |
+            const { DEPLOY_URL } = process.env;
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: `Preview URL: ${DEPLOY_URL}`
+            })
